Starting to have a plan for the design

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,21 @@ html{
     font-family: Bebas Neue;
 }
 body{
-    background-color: skyblue;
+    margin: 0px;
+    background-image: url("Great-ATuin.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+}
+.main-container{
+    
+    width: 100%;
+    height: 100vh;
+    margin: 0px;
+    padding: 0px;
+    
+    
 }
 
 #heroDiv{
@@ -11,10 +25,11 @@ body{
                          "b c";
     flex-direction: rows;
     align-items: center;
-    background-color: white;
     width: 100%;
     height: 90vh;
-    margin: 0;
+    margin: 0px;
+    padding: 0px;
+    color: white;
     
 }
 
@@ -25,6 +40,7 @@ body{
     margin: 0px 5%;
     overflow: hidden;
     border-radius: 50%;
+    border: 5px solid rgba(0,0,0,0.3);
     
 }
 
@@ -39,7 +55,7 @@ body{
     background-color: none;
     width: 400px;
     height: 100%;
-    margin: auto 5%;
+    margin: 0px 5%;
     text-align: center;
 
 
@@ -62,14 +78,36 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: 1px solid black;
-    height: 100%;
+    align-items: center;
+    background-color: rgba(0,0,0,0.8);
+    
+    border-radius: 10px;
+    
+    height: 90%;
     width: 90%;
     margin-left: auto;
-    text-align: center;
+    margin-right: 5%;
+}
+#heroHeading2{
+    font-size: 36px;
+    text-decoration: underline;
+    letter-spacing: 5px;
+    margin: 0;
 }
 
 #heroPara2{
-    width: 50%;
-    text-align: center;
+    width: 90%;
+    font-size: 24px;
+    margin: 0px;
+    text-align: left;
+    color: white;
+}
+
+#panel-1{
+    margin: 0px;
+    padding: 0px;
+    background-color: rgba(0,0,0,0.8);
+    border-radius: 10px;
+    height: 100%;
+    width: 100%;
 }
