--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 html{
     font-family: Bebas Neue;
+    min-width: 100px;
 }
 body{
     margin: 0px;
@@ -24,6 +25,7 @@ body{
     grid-template-areas: "a c" 
                          "b c";
     flex-direction: rows;
+    justify-content: center;
     align-items: center;
     width: 100%;
     height: 90vh;
@@ -82,7 +84,7 @@ body{
     background-color: rgba(0,0,0,0.8);
     
     border-radius: 10px;
-    
+    max-width: 500px;
     height: 90%;
     width: 90%;
     margin-left: auto;
