--- a/styles.css
+++ b/styles.css
@@ -3,140 +3,68 @@ html{
     min-width: 100px;
 }
 body{
-    margin: 0px;
     background-image: url("Great-ATuin.png");
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
-}
-.main-container{
-    
-    width: 100%;
-    height: 100vh;
-    margin: 0px;
-    padding: 0px;
-    
-    
-}
 
-#navBar{
     display: flex;
-    background-color: black;
-    font-color: white;
-    width: 100%;
+    flex-direction: column;
 
 }
 
-.contentDiv{
-    text-align: center;
+.navBar{
+    width: 90%;
+    height: 100%;
+    margin: auto;
+    color: white;
+    background-color: rgba(0,0,0,0.7);
 }
-
-#heroDiv{
+#navList{
+    height: 10vh;
     display: flex;
     flex-direction: rows;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+    font-size: 28px;
+    
+}
+#navList a{
+    color: white;
+    text-decoration: none;
+}
+
+.pageSection{
+    width: 100%;
+    height: 100vh;
+}
+.sectionDiv{
     width: 90%;
-    height: 90vh;
+    height: 100%;
     margin: auto;
-    padding: 0px;
+    border: 1px solid rgba(0,0,0,0);
+    margin-bottom: 1px;
+}
+.upperDiv{
+    width: 100%;
+    height: 10%;
+    background-color: rgba(0,0,0,0.7);
     color: white;
-    
-}
-
-.heroDivComponent{
-    border: 1px solid white;
-    height: 100%;
-}
-
-#heroDivLeft{
     display: flex;
-    flex-direction: column;
-    text-align: center;
-    
-    width: 40%;
-}
-#heroDivRight{
-    text-align: middle;
-    width: 60%;
-}
-
-#heroImgDiv{
-    width: 400px;
-    height: 400px;
-    margin: 0px 5%;
-    overflow: hidden;
-    
-    border-radius: 50%;
-    border: 5px solid rgba(0,0,0,0.3);
-    
-}
-
-#heroImg{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-#heroHeadingDiv{
-    grid-area: b;
-    background-color: none;
-    width: 400px;
-    height: 100%;
-    margin: 0px 5%;
-    text-align: center;
-
-
-}
-#heroHeading{
-    width: 100%;
-    font-size: 36px;
-    margin-top: auto;
-    margin-bottom: 0px;
-}
-
-#heroPara{
-    margin-top: auto;
-    color: gray;
-    font-size: 24px;
-}
-
-#heroPara2Div{
-    grid-area: c;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    background-color: rgba(0,0,0,0.8);
-    border: 5px solid white;
-    border-radius: 10px;
-    max-width: 500px;
-    height: 90%;
-    width: 90%;
-    margin-left: auto;
-    margin-right: 5%;
+    margin-bottom: 1%;
+    margin-top: 1%;
 }
-#heroHeading2{
-    font-size: 36px;
-    text-decoration: underline;
-    letter-spacing: 5px;
-    margin: 0;
-}
-
-#heroPara2{
-    width: 90%;
-    font-size: 24px;
-    margin: 0px;
-    text-align: left;
-    color: white;
-}
-
-#books{
-    margin: 0px;
-    padding: 0px;
-    background-color: rgba(0,0,0,0.8);
-    border-radius: 10px;
-    height: 100%;
+.upperDiv p{
     width: 100%;
+    height: auto;
+    margin: auto;
+    text-align: center;
+    font-size: 36px;
+}
+.mainDiv{
+    width: 100%;
+    height: 84%;
+    background-color: rgba(0,0,0,0.7);
 }
