--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,15 @@ body{
     border: 1px solid rgba(0,0,0,0);
     margin-bottom: 1px;
 }
+
+.lrborder{
+    height: 100%;
+    width: 90%;
+    margin: auto;
+    border-left: 1px solid white;
+    border-right: 1px solid white;
+}
+
 .upperDiv{
     width: 100%;
     height: 10%;
@@ -67,4 +76,70 @@ body{
     width: 100%;
     height: 84%;
     background-color: rgba(0,0,0,0.7);
+}
+
+#pterryMainDiv{
+    height: 98%;
+    margin-top: 0.5%;
+    display: flex;
+    flex-direction: rows;
+    flex-basis: 100%;
+    justify-content: center;
+}
+
+#pterryMainDivleft{
+    border-left: 1px solid white;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0px;
+}
+
+#pterryimagewrapper{
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    
+    overflow: hidden;
+}
+
+#TerryPratchettPic{
+    width:400px;
+    height: 550px;
+    object-fit: cover;
+}
+
+#pterrynamewrapper{
+    color: white;
+    text-align: center;
+}
+
+#pterrynamewrapper p {
+    font-size: 24px;
+    margin: 0px;
+    letter-spacing: 1px;
+}
+
+#pterryname{
+    letter-spacing: 1px;
+}
+
+#pterryMainDivright{
+    border-right: 1px solid white;
+    width: 50%;
+}
+
+#lefttextwrapper{
+    color: white;
+    font-size: 28px;
+    margin: auto;
+    width: 80%;
+    margin-top: 10%;
+}
+
+#lefttextwrapper p{
+    line-height: 40px;
+    text-align: justify;
 }
