--- a/CSS/quotessection.css
+++ b/CSS/quotessection.css
@@ -5,21 +5,19 @@
     gap: 10px;
 }
 
-.upperQuotes{
+#upperQuotes{
     margin: 20px;
-    color: white;
-    border: 1px solid white;
     width: 90%;
     height: 8em;
     text-align: center;
     font-size: 40px;
-
+    padding: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.lowerQuotes{
+#lowerQuotes{
     color: white;
     font-size: 30px;
     width: 100%;
