--- a/CSS/quotessection.css
+++ b/CSS/quotessection.css
@@ -6,11 +6,10 @@
 }
 
 #upperQuotes{
-    margin: 20px;
-    width: 90%;
-    height: 8em;
+    width: 98.3%;
+    height: 70%;
     text-align: center;
-    font-size: 40px;
+    font-size: 2.8em;
     padding: 10px;
     display: flex;
     justify-content: center;
