--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -75,15 +75,19 @@ body{
     background-color: rgba(0,0,0,0.9);
     color: white;
     display: flex;
-    align-items: center;
     margin-bottom: 1%;
     margin-top: 1%;
+
 }
+
 .upperDiv p{
-    width: 100%;
-    height: auto;
+    width: 90%;
+    height: 100%;
     margin: auto;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 36px;
 }
 .mainDiv{
