--- a/CSS/discworldsection.css
+++ b/CSS/discworldsection.css
@@ -15,7 +15,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    outline: 6px solid white;
+    outline: 6px solid #4354a1;
     outline-offset: -6px;
     background-color: #272540;
 }
@@ -31,10 +31,9 @@
 }
 
 .disctextdiv{
-    border: 1px solid white;
     background-color: #272540;
     width: 100%;
-    height: 88%;
+    height: 100%;
     display: flex;
     justify-conent: center;
     align-items: center;
@@ -47,7 +46,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    outline: 10px solid white;
+    outline: 10px solid #4354a1;
     outline-offset: -10px;
 
 }
@@ -77,6 +76,6 @@
     padding: 5% 3% 0% 3%;
     font-size: 20px;
     letter-spacing: 1px;
-    outline: 10px solid white;
+    outline: 10px solid #4354a1;
     outline-offset: -10px;
 }
