--- a/CSS/booksection.css
+++ b/CSS/booksection.css
@@ -124,11 +124,11 @@
 }
 
 .bookcolour7{
-    outline: 19px solid #cfcd9a;
+    outline: 19px solid #fed2a1;
     height: 100%;
     outline-offset: -19px;
-    background-color: #2a4127;
-    color: #c2a248;
+    background-color: #8c4d78;
+    color: #ececfa;
 }
 
 .slidebutton{
